[gd_scene load_steps=11 format=3 uid="uid://e0ebcv1n8jnq"]

[ext_resource type="Script" path="res://Scripts/InventoryWindow.gd" id="1_7kqbx"]
[ext_resource type="Script" path="res://addons/gloot/core/inventory_grid_stacked.gd" id="2_alcyo"]
[ext_resource type="Resource" uid="uid://bvrl0obu5ejqq" path="res://ItemProtosets.tres" id="3_sqsc0"]
[ext_resource type="Script" path="res://addons/gloot/ui/ctrl_inventory_grid_ex.gd" id="4_8j4xb"]
[ext_resource type="Texture2D" uid="uid://c5tbuxmrli7e4" path="res://Mods/Core/Items/steel_scrap.png" id="4_s2r2r"]
[ext_resource type="Texture2D" uid="uid://cwmsngeoc631h" path="res://Textures/Screenshot_167.png" id="5_wixd1"]
[ext_resource type="FontFile" uid="uid://chm7lbcdeyo0h" path="res://Roboto-Bold.ttf" id="6_xpf2l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bcjil"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2f0xd"]

[sub_resource type="Theme" id="Theme_6v4rg"]
default_font = ExtResource("6_xpf2l")
default_font_size = 13

[node name="InventoryWindow" type="Control" node_paths=PackedStringArray("proximity_inventory", "proximity_inventory_control", "inventory_control", "inventory", "tooltip", "tooltip_item_name", "tooltip_item_description")]
layout_mode = 3
anchors_preset = 0
offset_top = 150.0
offset_right = 470.0
offset_bottom = 670.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_7kqbx")
proximity_inventory = NodePath("InventoryGridStackedProx")
proximity_inventory_control = NodePath("HBoxContainer/Inventories/CtrlInventoryGridExProx")
inventory_control = NodePath("HBoxContainer/Inventories/CtrlInventoryGridEx")
inventory = NodePath("InventoryGridStacked")
tooltip = NodePath("Tooltip")
tooltip_item_name = NodePath("Tooltip/Panel/ItemName")
tooltip_item_description = NodePath("Tooltip/Panel2/Description")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129412, 0.14902, 0.180392, 1)

[node name="InventoryGridStacked" type="Node" parent="."]
script = ExtResource("2_alcyo")
size = Vector2i(12, 8)
item_protoset = ExtResource("3_sqsc0")

[node name="InventoryGridStackedProx" type="Node" parent="."]
script = ExtResource("2_alcyo")
size = Vector2i(12, 8)
item_protoset = ExtResource("3_sqsc0")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ContainersList" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/ContainersList"]
layout_mode = 2
texture = ExtResource("4_s2r2r")

[node name="Inventories" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="CtrlInventoryGridExProx" type="Control" parent="HBoxContainer/Inventories"]
custom_minimum_size = Vector2(384, 256)
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("4_8j4xb")
field_style = SubResource("StyleBoxFlat_bcjil")
inventory_path = NodePath("../../../InventoryGridStackedProx")
default_item_texture = ExtResource("5_wixd1")

[node name="CtrlInventoryGridEx" type="Control" parent="HBoxContainer/Inventories"]
custom_minimum_size = Vector2(384, 256)
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("4_8j4xb")
field_style = SubResource("StyleBoxFlat_2f0xd")
selection_color = Color(0.745098, 0.745098, 0.745098, 0.941176)
inventory_path = NodePath("../../../InventoryGridStacked")
default_item_texture = ExtResource("5_wixd1")

[node name="Tooltip" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 242.0
offset_bottom = 115.0
pivot_offset = Vector2(0, 173)
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "kjkgkjghkjjhkg"

[node name="Panel" type="Panel" parent="Tooltip"]
layout_mode = 2
offset_left = 1.0
offset_top = 1.0
offset_right = 241.0
offset_bottom = 33.0
size_flags_vertical = 3

[node name="ItemName" type="Label" parent="Tooltip/Panel"]
layout_mode = 0
offset_right = 240.0
offset_bottom = 32.0
theme_override_colors/font_color = Color(0.921569, 0.596078, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("6_xpf2l")
theme_override_font_sizes/font_size = 20
text = "Item name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel2" type="Panel" parent="Tooltip"]
layout_mode = 2
offset_left = 1.0
offset_top = 35.0
offset_right = 241.0
offset_bottom = 115.0
size_flags_vertical = 3

[node name="Description" type="Label" parent="Tooltip/Panel2"]
layout_mode = 0
offset_right = 240.0
offset_bottom = 32.0
theme = SubResource("Theme_6v4rg")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("6_xpf2l")
theme_override_font_sizes/font_size = 13
text = "Item description"
autowrap_mode = 3

[connection signal="item_added" from="InventoryGridStacked" to="." method="_on_inventory_grid_stacked_item_added"]
[connection signal="item_mouse_entered" from="HBoxContainer/Inventories/CtrlInventoryGridExProx" to="." method="_on_inventory_item_mouse_entered"]
[connection signal="item_mouse_exited" from="HBoxContainer/Inventories/CtrlInventoryGridExProx" to="." method="_on_inventory_item_mouse_exited"]
[connection signal="item_mouse_entered" from="HBoxContainer/Inventories/CtrlInventoryGridEx" to="." method="_on_inventory_item_mouse_entered"]
[connection signal="item_mouse_exited" from="HBoxContainer/Inventories/CtrlInventoryGridEx" to="." method="_on_inventory_item_mouse_exited"]
